--- a/assets/css/rubick.css
+++ b/assets/css/rubick.css
@@ -777,7 +777,17 @@ fieldset[disabled] .form-control {
   display: inline-block;
   vertical-align: middle;
   margin-top: -25px;
-  /* tweak to align vertically */
+}
+
+/* Scale down logo on mobile devices */
+@media (max-width: 768px) {
+  .navbar-brand .navbar-logo {
+    height: 50px;
+    width: auto;
+    margin-bottom: -4px;
+    vertical-align: middle;
+    display: inline-block;
+  }
 }
 
 .navbar .navbar-nav>li>a {
@@ -4489,8 +4499,8 @@ body.noscroll {
 }
 
 .section-team-4 .team .member img {
-  width: 330px;
-  height: 500px;
+  width: 100%;
+  height: auto;
   object-fit: cover;
   /* makes the image cover the box */
   object-position: center;
@@ -4507,8 +4517,8 @@ body.noscroll {
 /* your existing styles... */
 
 .section-team-4 .team .member .photo {
-  width: 330px;
-  height: 500px;
+  width: 100%;
+  height: auto;
   overflow: hidden;
   /* ensures zoomed image stays inside */
   margin: 10px auto;
